@@ -1,5 +1,7 @@
 Revision history for libev, a high-performance and full-featured event loop.
 
+        - event_base_loopexit should return 0 on success
+          (W.C.A. Wijngaards).
 	- added linux eventfd support.
         - try to autodetect epoll and inotify support
           by libc header version if not using autoconf.
@@ -7,8 +9,9 @@ Revision history for libev, a high-performance and full-featured event loop.
         - declare functions defined in ev.h as inline if
           C99 or gcc are available.
         - enable inlining with gcc versions 2 and 3.
-        - event_base_loopexit should return 0 on success
-          (W.C.A. Wijngaards).
+        - work around a bug in realloc on openbsd and darwin,
+          also makes the errornous valgrind complaints
+          go away (noted by various people).
 
 3.2  Wed Apr  2 17:11:19 CEST 2008
 	- fix a 64 bit overflow issue in the select backend,
